tests/baselines/reference/invalidBooleanAssignments.errors.txt
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(3,5): error TS2322: Type 'true' is not assignable to type 'number'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(4,5): error TS2322: Type 'true' is not assignable to type 'string'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(5,5): error TS2322: Type 'true' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(9,5): error TS2322: Type 'true' is not assignable to type 'E'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(12,5): error TS2322: Type 'true' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(15,5): error TS2322: Type 'true' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(17,5): error TS2322: Type 'true' is not assignable to type '() => string'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(21,1): error TS2539: Cannot assign to 'M' because it is not a variable.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(24,5): error TS2322: Type 'boolean' is not assignable to type 'T'.
  'boolean' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(26,1): error TS2539: Cannot assign to 'i' because it is not a variable.


==== tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts (10 errors) ====
    var x = true;
    
    var a: number = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type 'number'.
    var b: string = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type 'string'.
    var c: void = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type 'void'.
    var d: typeof undefined = x;
    
    enum E { A }
    var e: E = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type '{|E|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts:8:6
    
    class C { foo: string }
    var f: C = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type '{|C|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts:11:7
    
    interface I { bar: string }
    var g: I = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type '{|I|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts:14:11
    
    var h: { (): string } = x;
        ~
!!! error TS2322: Type 'true' is not assignable to type '() => string'.
    var h2: { toString(): string } = x; // no error
    
    module M { export var a = 1; }
    M = x;
    ~
!!! error TS2539: Cannot assign to 'M' because it is not a variable.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type 'boolean' is not assignable to type '{|T|0|}'.
!!! error TS2322:   'boolean' is assignable to the constraint of type '{|T|1|}', but '{|T|2|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts:23:12
!!! annotated symbol 1 tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts:23:12
!!! annotated symbol 2 tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts:23:12
    }
    i = x;
    ~
!!! error TS2539: Cannot assign to 'i' because it is not a variable.